01-prereqs/02-dbeaver/03-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: cloud-beaver
spec:
  to:
    kind: Service
    name: cloud-beaver
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
